--- a/app/src/main/res/layout/fragment_statistics_users.xml
+++ b/app/src/main/res/layout/fragment_statistics_users.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".admin.statistics.users.Statistics_users">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
     <com.mindorks.editdrawabletext.EditDrawableText
         android:id="@+id/search"
@@ -35,10 +39,12 @@
         android:layout_marginTop="10dp"
         tools:listitem="@layout/item_statistics_user" />
 
+
+    </LinearLayout>
     <ProgressBar
         android:id="@+id/loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true" />
 
-</LinearLayout>
+</RelativeLayout>
